--- a/toeic-web/pom.xml
+++ b/toeic-web/pom.xml
@@ -11,6 +11,12 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
     <artifactId>toeic-web</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.ndvcute</groupId>
+            <artifactId>toeic-core-persistence-data</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
