--- a/toeic-core-dao-impl/pom.xml
+++ b/toeic-core-dao-impl/pom.xml
@@ -11,6 +11,20 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>toeic-core-dao-impl</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.ndvcute</groupId>
+            <artifactId>toeic-core-dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.ndvcute</groupId>
+            <artifactId>toeic-core-dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
